--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sven Julius Steinert</title>
   </head>
-  <body>
-	Welcome on the Landingpage :)
+  <style>
+    .centerBox {
+      text-align: center;
+      position: absolute;
+      top:10%;
+      left:50%;
+      transform: translate(-50%, -50%);
+    }
+    body{
+      background-color:rgb(229, 229, 229);
+      overflow: hidden;
+    }
+  </style>
+  <body >
+    <div class="centerBox">
+      Welcome on the Landingpage :)
+    </div>
   </body>
+  <script src="GPT-3.js"></script> 
 </html>
