--- a/index.html
+++ b/index.html
@@ -4,20 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sven Julius Steinert</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <style>
-    .centerBox {
-      text-align: center;
-      position: absolute;
-      top:10%;
-      left:50%;
-      transform: translate(-50%, -50%);
-    }
-    body{
-      background-color:rgb(229, 229, 229);
-      overflow: hidden;
-    }
-  </style>
   <body >
     <div class="centerBox">
       Welcome on the Landingpage :)
