--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body >
-    <div class="centerBox">
-      Welcome on the Landingpage :)
+    <img id="bgimg" class="imgbanner" src="img/DSC_0100.avif" alt="Sven Julius Steinert">
+
+    <div class="centerBox" onclick="togglebg()" >
+
+      <div class="buttons">
+        <a target="_blank" href="https://github.com/Sven-J-Steinert"><img class="buttonimg" src="img/Github.png"></a>
+      </div>
+      <div class="buttons">
+        <a target="_blank" href="https://www.researchgate.net/profile/Sven-Steinert-2"><img class="buttonimg" src="img/ResearchGate.png"></a>
+      </div>
+      
+
     </div>
+
   </body>
-  <script src="GPT-3.js"></script> 
+  <script src="GPT-3.js"></script>
+  <script src="wraping.js"></script>
 </html>
