no grid, add description

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         setTimeout(togglebg, 1500);
       }
     </script>
+    <link href="https://fonts.googleapis.com/css2?family=Inspiration&display=swap" rel="stylesheet">
   </head>
   <body onload="startAnimationAfterDelay()">
     <img id="bgimg" class="imgbanner" src="img/DSC_0100.avif" alt="Sven Julius Steinert">
@@ -27,6 +28,10 @@
       </div>
       
 
+    </div>
+
+    <div class="description" id="descr">
+      <span class="calligraphy">Star Formation</span>
     </div>
 
   </body>
