--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <div class="buttons">
           <a target="_blank" href="https://orcid.org/0000-0003-4424-670X"><img class="buttonimg" src="img/ORCid.png"></a>
         </div>
+        <div class="buttons">
+          <a target="_blank" href="https://www.linkedin.com/in/sven-julius-steinert/"><img class="buttonimg" src="img/Linkedin.png"></a>
+        </div>
       </div>
 
       <!-- Card Element -->
