add link to oxfordabstracts

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <p class="card-type">Conference Poster - IEPC 2025, UniBw</p>
           <p class="card-summary">A novel ignition method for Vacuum Arc Thrusters was demonstrated of a compact laser ignition system based on laser diodes. A pulsed laser driver was developed to generate adjustable pulses. Microsecond laser pulses were focused onto candidate ablation materials biased by a pulse-forming network, where laser-induced ablation initiated the arc discharge. Experiments demonstrated successful ignition with pyrolytic carbon and graphite. By introducing a nearby flow path, the initial seed arc was elongated and transferred to a secondary material, where the main discharge occurred. This effectively decouples the ignition process from the electrode erosion. These results mark a pivotal step toward the development of VATs fully reliant on laser ignition.</p>
           <div class="card-button-container">
+            <a href="https://virtual.oxfordabstracts.com/event/73412/submission/604" target="_blank" class="card-button"> <img style="height:30px" src="img/web.svg"> </a>
             <a href="https://files.sven-j-steinert.de/IEPC-2025-604.pdf" target="_blank" class="card-button"> <img src="img/pdf.svg"> </a>
           </div> 
         </div>
