Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <p class="card-summary">An experimental setup was constructed and carried out on site at ESTEC, in the Netherlands. Multiple data-aquisition systems based on LabVIEW have been recording key parameters during the test. The Imperial thrust balance was utilised and improved on multiple aspects. The calibration procedures and evaluation was automated, the uncertainty budget was expanded and a new post processing method was crafted to support thrust curve measurements. Uncertainty budgets have been determined for both the mass flow- and the thrust measurements. This characterisation was exemplary to aquire all skills sourrounding vacuum testing of electric propulsion.</p>
           <div class="card-button-container">
             <a href="https://files.sven-j-steinert.de/Masterthesis.pdf" target="_blank" class="card-button"> <img src="img/pdf.svg"> </a>
-          </div> 
+          </div>
+<a href="/scholar/masterthesis.html" style="font-size:0.7em;opacity:0.35;margin-left:0.5em;text-decoration:none;" aria-label="Google Scholar landing page">Scholar</a>
         </div>
       </div>
 
