Aktualisieren von masterthesis.html

--- a/scholar/masterthesis.html
+++ b/scholar/masterthesis.html
@@ -41,13 +41,7 @@
   <h2>Abstract</h2>
 
   <p>
-    Space propulsion thrusters are core elements of any spacecraft that requires mobility.
-    Electric propulsion covers a particular niche by utilising electrical energy for thrust
-    creation. In this study, an experimental characterisation of the XR-100 resistojet is
-    conducted at the European Space Agency (ESA) Propulsion Laboratory (EPL). The work
-    documents the experimental setup, thrust balance operation, uncertainty analysis, and
-    comparison between measured performance and analytical modelling under cold-flow
-    and heated conditions.
+An experimental setup was constructed and executed at ESTEC, the Netherlands. Multiple data acquisition systems based on LabVIEW were used to record key parameters during testing. The Imperial College London thrust balance was utilised and improved in several aspects. The calibration procedure and evaluation were automated, the uncertainty budget was expanded, and a new post-processing method was developed to support thrust curve measurements. Uncertainty budgets were determined for the mass flow rate and thrust measurements, and propagated to the resulting specific impulse. This characterisation served to develop comprehensive skills related to vacuum testing of electric propulsion systems.
   </p>
 
   <p>
