Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <div class="card-content">
           <h2 class="card-title">Experimental Characterisation of the XR-100 Resistojet in the ESA Propulsion Laboratory</h2>
           <p class="card-type">Masterthesis - 2024, ESA & TUM</p>
-          <p class="card-summary">An experimental setup was constructed and carried out on site at ESTEC, in the Netherlands. Multiple data-aquisition systems based on LabVIEW have been recording key parameters during the test. The Imperial thrust balance was utilised and improved on multiple aspects. The calibration procedures and evaluation was automated, the uncertainty budget was expanded and a new post processing method was crafted to support thrust curve measurements. Uncertainty budgets have been determined for both the mass flow- and the thrust measurements. This characterisation was exemplary to aquire all skills sourrounding vacuum testing of electric propulsion.</p>
+          <p class="card-summary"> An experimental setup was constructed and executed at ESTEC, the Netherlands. Multiple data acquisition systems based on LabVIEW were used to record key parameters during testing. The Imperial College London thrust balance was utilised and improved in several aspects. The calibration procedure and evaluation were automated, the uncertainty budget was expanded, and a new post-processing method was developed to support thrust curve measurements. Uncertainty budgets were determined for the mass flow rate and thrust measurements, and propagated to the resulting specific impulse. This characterisation served to develop comprehensive skills related to vacuum testing of electric propulsion systems.</p>
           <div class="card-button-container">
+<a href="/scholar/masterthesis.html" style="font-size:0.7em;opacity:0.35;margin-left:0.5em;text-decoration:none;" aria-label="Google Scholar landing page">Scholar</a>
             <a href="https://files.sven-j-steinert.de/Masterthesis.pdf" target="_blank" class="card-button"> <img src="img/pdf.svg"> </a>
           </div>
-<a href="/scholar/masterthesis.html" style="font-size:0.7em;opacity:0.35;margin-left:0.5em;text-decoration:none;" aria-label="Google Scholar landing page">Scholar</a>
         </div>
       </div>
 
