Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p class="card-type">Masterthesis - 2024, ESA & TUM</p>
           <p class="card-summary"> An experimental setup was constructed and executed at ESTEC, the Netherlands. Multiple data acquisition systems based on LabVIEW were used to record key parameters during testing. The Imperial College London thrust balance was utilised and improved in several aspects. The calibration procedure and evaluation were automated, the uncertainty budget was expanded, and a new post-processing method was developed to support thrust curve measurements. Uncertainty budgets were determined for the mass flow rate and thrust measurements, and propagated to the resulting specific impulse. This characterisation served to develop comprehensive skills related to vacuum testing of electric propulsion systems.</p>
           <div class="card-button-container">
-<a href="/scholar/masterthesis.html" style="font-size:0.7em;opacity:0.35;margin-left:0.5em;text-decoration:none;" aria-label="Google Scholar landing page">Scholar</a>
+<a href="/scholar/masterthesis.html" style="float:left;font-size:0.7em;opacity:0.35;margin-left:0.5em;text-decoration:none;" aria-label="Google Scholar landing page">Scholar</a>
             <a href="https://files.sven-j-steinert.de/Masterthesis.pdf" target="_blank" class="card-button"> <img src="img/pdf.svg"> </a>
           </div>
         </div>
