--- a/scholar/iepc-2025-604.html
+++ b/scholar/iepc-2025-604.html
@@ -3,56 +3,65 @@
 <head>
   <meta charset="UTF-8">
 
-  <title>
-    Experimental Characterisation of the XR-100 Resistojet in the ESA Propulsion Laboratory
-  </title>
+  <title>Compact Laser Ignition for Vacuum Arc Thrusters</title>
 
-  <!-- Google Scholar metadata -->
-  <meta name="citation_title"
-        content="Experimental Characterisation of the XR-100 Resistojet in the ESA Propulsion Laboratory">
+  <!-- Google Scholar metadata (ONE work per page) -->
+  <meta name="citation_title" content="Compact Laser Ignition for Vacuum Arc Thrusters">
 
-  <meta name="citation_author"
-        content="Sven Julius Steinert">
+  <meta name="citation_author" content="Sven Julius Steinert">
+  <meta name="citation_author" content="Tommi Meyer">
+  <meta name="citation_author" content="Jochen Schein">
 
-  <meta name="citation_publication_date"
-        content="2024">
+  <!-- Prefer full date when known -->
+  <meta name="citation_publication_date" content="2025/09/15">
 
-  <meta name="citation_pdf_url"
-        content="https://files.sven-j-steinert.de/Masterthesis.pdf">
+  <!-- Direct, publicly accessible PDF -->
+  <meta name="citation_pdf_url" content="https://files.sven-j-steinert.de/IEPC-2025-604.pdf">
 
-  <meta name="citation_doi"
-        content="10.5281/zenodo.18002385">
+  <!-- Zenodo DOI (this version) -->
+  <meta name="citation_doi" content="10.5281/zenodo.18016456">
+
+  <!-- Helpful context (optional but good) -->
+  <meta name="citation_conference_title" content="39th International Electric Propulsion Conference (IEPC 2025)">
+  <meta name="citation_conference_location" content="London, United Kingdom">
+  <meta name="citation_keywords" content="electric propulsion; Vacuum Arc Thruster; laser ignition; laser diode">
+
+  <!-- Landing page -->
+  <meta name="citation_public_url" content="https://zenodo.org/records/18016456">
 
   <!-- Basic crawl safety -->
   <meta name="robots" content="index, follow">
-
 </head>
+
 <body>
-
-  <h1>
-    Experimental Characterisation of the XR-100 Resistojet in the ESA Propulsion Laboratory
-  </h1>
+  <h1>Compact Laser Ignition for Vacuum Arc Thrusters</h1>
 
   <p>
-    <strong>Sven Julius Steinert</strong><br>
-    Master’s Thesis, 2024
+    <strong>Sven Julius Steinert</strong>, Tommi Meyer, Jochen Schein<br>
+    Poster — Published September 15, 2025 (v1)<br>
+    39th International Electric Propulsion Conference (IEPC 2025), London, United Kingdom, 14–19 September 2025
   </p>
 
-  <h2>Abstract</h2>
-
+  <h2>Description</h2>
   <p>
-An experimental setup was constructed and executed at ESTEC, the Netherlands. Multiple data acquisition systems based on LabVIEW were used to record key parameters during testing. The Imperial College London thrust balance was utilised and improved in several aspects. The calibration procedure and evaluation were automated, the uncertainty budget was expanded, and a new post-processing method was developed to support thrust curve measurements. Uncertainty budgets were determined for the mass flow rate and thrust measurements, and propagated to the resulting specific impulse. This characterisation served to develop comprehensive skills related to vacuum testing of electric propulsion systems.
+    The lifetime of existing Vacuum Arc Thrusters (VATs) is fundamentally limited by their ignition system,
+    motivating the exploration of alternative approaches. This work presents a novel demonstration of a compact
+    laser ignition system based on laser diodes. A pulsed laser driver was developed to generate adjustable pulses.
+    Microsecond laser pulses were focused onto candidate ablation materials biased by a pulse-forming network (PFN),
+    where laser-induced ablation initiated the arc discharge. Experiments demonstrated successful ignition with
+    pyrolytic carbon and graphite. Pyrolytic carbon showed near-instantaneous plasma ignition, suggesting a very low
+    ignition threshold, but poor repeatability as surface modification by the arc discharge prevented further ignitions.
+    Graphite, in contrast, exhibited strong repeatability with example conditions of a 0.65 mm gap, 400 V PFN voltage,
+    and 49 J/cm² over 500 µs at 455 nm. By introducing a nearby flow path, the initial seed arc was elongated and
+    transferred to a secondary material, where the main discharge occurred. This effectively decouples the ignition
+    process from the electrode erosion. These results mark a pivotal step toward the development of VATs fully reliant
+    on laser ignition.
   </p>
 
   <p>
-    <a href="https://files.sven-j-steinert.de/Masterthesis.pdf">
-      Download PDF
-    </a>
-    <br>
-    DOI:
-    <a href="https://doi.org/10.5281/zenodo.18002385">
-      10.5281/zenodo.18002385
-    </a>
+    <a href="https://files.sven-j-steinert.de/IEPC-2025-604.pdf">Download PDF</a><br>
+    DOI: <a href="https://doi.org/10.5281/zenodo.18016456">10.5281/zenodo.18016456</a><br>
+    Zenodo record: <a href="https://zenodo.org/records/18016456">https://zenodo.org/records/18016456</a>
   </p>
 
 </body>
