--- a/scholar/iepc-2025-604.html
+++ b/scholar/iepc-2025-604.html
@@ -60,8 +60,7 @@
 
   <p>
     <a href="https://files.sven-j-steinert.de/IEPC-2025-604.pdf">Download PDF</a><br>
-    DOI: <a href="https://doi.org/10.5281/zenodo.18016456">10.5281/zenodo.18016456</a><br>
-    Zenodo record: <a href="https://zenodo.org/records/18016456">https://zenodo.org/records/18016456</a>
+    DOI: <a href="https://doi.org/10.5281/zenodo.18016456">10.5281/zenodo.18016456</a>
   </p>
 
 </body>
