Aktualisieren von iepc-2025-604.html

--- a/scholar/iepc-2025-604.html
+++ b/scholar/iepc-2025-604.html
@@ -38,7 +38,7 @@
 
   <p>
     <strong>Sven Julius Steinert</strong>, Tommi Meyer, Jochen Schein<br>
-    Poster — Published September 15, 2025 (v1)<br>
+    Poster — Published September 15, 2025<br>
     39th International Electric Propulsion Conference (IEPC 2025), London, United Kingdom, 14–19 September 2025
   </p>
 
