--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
           <a target="_blank" href="https://github.com/Sven-J-Steinert"><img class="buttonimg" src="img/Github.png"></a>
         </div>
         <div class="buttons">
-          <a target="_blank" href="https://www.researchgate.net/profile/Sven-Steinert-2"><img class="buttonimg" src="img/ResearchGate.png"></a>
+          <a target="_blank" href="https://scholar.google.com/citations?user=HsaMC8sAAAAJ&hl"><img class="buttonimg" src="img/scholar.png"></a>
         </div>
         <div class="buttons">
           <a target="_blank" href="https://orcid.org/0000-0003-4424-670X"><img class="buttonimg" src="img/ORCid.png"></a>
+        </div>
+        <div class="buttons">
+          <a target="_blank" href="https://www.researchgate.net/profile/Sven-Steinert-2"><img class="buttonimg" src="img/ResearchGate.png"></a>
         </div>
         <div class="buttons">
           <a target="_blank" href="https://www.linkedin.com/in/sven-julius-steinert/"><img class="buttonimg" src="img/Linkedin.png"></a>
