--- a/index.html
+++ b/index.html
@@ -40,62 +40,121 @@
         </div>
       </div>
 
-      <!-- Card Element -->
-    
-      <div class="card">
-        <img class="card-gallery" src="img/IEPC-2025.avif" alt="Project Gallery">
-        <div class="card-content">
-          <h2 class="card-title">Compact Laser Ignition for Vacuum Arc Thrusters</h2>
-          <p class="card-type">Conference Poster - IEPC 2025, UniBw</p>
-          <p class="card-summary">A novel ignition method for Vacuum Arc Thrusters was demonstrated of a compact laser ignition system based on laser diodes. A pulsed laser driver was developed to generate adjustable pulses. Microsecond laser pulses were focused onto candidate ablation materials biased by a pulse-forming network, where laser-induced ablation initiated the arc discharge. Experiments demonstrated successful ignition with pyrolytic carbon and graphite. By introducing a nearby flow path, the initial seed arc was elongated and transferred to a secondary material, where the main discharge occurred. This effectively decouples the ignition process from the electrode erosion. These results mark a pivotal step toward the development of VATs fully reliant on laser ignition.</p>
-          <div class="card-button-container">
-<a href="/scholar/iepc-2025-604.html" style="float:left;font-size:0.7em;opacity:0.35;margin-left:0.5em;text-decoration:none;" aria-label="Google Scholar landing page">Scholar</a>
-            <a href="https://virtual.oxfordabstracts.com/event/73412/submission/604" target="_blank" class="card-button"> <img style="height:30px" src="img/web.svg"> </a>
-            <a href="https://files.sven-j-steinert.de/IEPC-2025-604.pdf" target="_blank" class="card-button"> <img src="img/pdf.svg"> </a>
-          </div> 
-        </div>
-      </div>
-    
-      <div class="card">
-        <img class="card-gallery" src="img/Masterthesis.avif" alt="Project Gallery">
-        <div class="card-content">
-          <h2 class="card-title">Experimental Characterisation of the XR-100 Resistojet in the ESA Propulsion Laboratory</h2>
-          <p class="card-type">Masterthesis - 2024, ESA & TUM</p>
-          <p class="card-summary"> An experimental setup was constructed and executed at ESTEC, the Netherlands. Multiple data acquisition systems based on LabVIEW were used to record key parameters during testing. The Imperial College London thrust balance was utilised and improved in several aspects. The calibration procedure and evaluation were automated, the uncertainty budget was expanded, and a new post-processing method was developed to support thrust curve measurements. Uncertainty budgets were determined for the mass flow rate and thrust measurements, and propagated to the resulting specific impulse. This characterisation served to develop comprehensive skills related to vacuum testing of electric propulsion systems.</p>
-          <div class="card-button-container">
-<a href="/scholar/masterthesis.html" style="float:left;font-size:0.7em;opacity:0.35;margin-left:0.5em;text-decoration:none;" aria-label="Google Scholar landing page">Scholar</a>
-            <a href="https://files.sven-j-steinert.de/Masterthesis.pdf" target="_blank" class="card-button"> <img src="img/pdf.svg"> </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-gallery" src="img/Smesterthesis.avif" alt="Project Gallery">
-        <div class="card-content">
-          <h2 class="card-title">Design of a Hall Thruster and Investigation for a Water Electrolysis Propulsion System</h2>
-          <p class="card-type">Semesterthesis - 2024, TUM</p>
-          <p class="card-summary">As an early stage investigation on electrical propulsion via electrolysis, a Hall Thruster was designed for operation on molecular oxygen. A magnetically shielded configuration was developed through simulations with FEMM. To enable parametric testing, the discharge channel length was layed out to be stepless adjustable. Nevertheless, it is concluded that electric propulsion based on oxygen is facing drawbacks in low efficiency, especially when evaluated over the full electrolysis system. As alternative, experimental ideas for OH- ion extraction directly from the water are proposed.</p>
-          <div class="card-button-container">
-            <a href="https://files.sven-j-steinert.de/Semesterthesis.pdf" target="_blank" class="card-button"> <img src="img/pdf.svg"> </a>
-          </div> 
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-gallery" src="img/Frontiers.avif" alt="Project Gallery">
-        <div class="card-content">
-          <h2 class="card-title">Location-dependent flight cost difference from the lunar surface to an orbital fuel depot and its influence on in-situ resource utilisation location selection</h2>
-          <p class="card-type">Peer Reviewed Research Paper - 2024, DLR</p>
-          <p class="card-summary">In order to determine the most optimal location for a robotic factory on the moon, production- and transportation dependencies have been compared. In this work, the process of ilmenite reduction was analysed globally with imaging data of the Lunar Reconnaissance Orbiter and factory scaling models. For the transportation costs a global delta-v map to the 9:2 NRHO was constructed, which was applied to a launcher. The key finding is an insignificant influence of the transportation costs on the location selection.</p>
-          <div class="card-button-container">
-            <a href="https://github.com/Sven-J-Steinert/10.3389-frspt.2024.1352213" target="_blank" class="card-button"> <img style="height:30px" src="img/repo.svg"> </a>
-            <a href="https://www.frontiersin.org/journals/space-technologies/articles/10.3389/frspt.2024.1352213/pdf" target="_blank" class="card-button"> <img src="img/pdf.svg"> </a>
-          </div> 
-        </div>
-      </div>
-
-    </div>
+     <!-- Card Element -->
+<div class="card">
+<img alt="Project Gallery" class="card-gallery" src="/IEPC-2025.avif"/>
+<div class="card-content">
+<h2 class="card-title">Compact Laser Ignition for Vacuum Arc Thrusters</h2>
+<p class="card-type">Conference Poster - IEPC 2025, UniBw</p>
+<p class="card-summary">A novel ignition method for Vacuum Arc
+ Thrusters was demonstrated of a compact laser ignition system based on 
+laser diodes. A pulsed laser driver was developed to generate adjustable
+ pulses. Microsecond laser pulses were focused onto candidate ablation 
+materials biased by a pulse-forming network, where laser-induced 
+ablation initiated the arc discharge. Experiments demonstrated 
+successful ignition with pyrolytic carbon and graphite. By introducing a
+ nearby flow path, the initial seed arc was elongated and transferred to
+ a secondary material, where the main discharge occurred. This 
+effectively decouples the ignition process from the electrode erosion. 
+These results mark a pivotal step toward the development of VATs fully 
+reliant on laser ignition.</p>
+<div class="card-button-container">
+<a aria-label="Publication landing page (Google Scholar)" class="card-button pubpage-link" href="https://sven-j-steinert.de/scholar/iepc-2025-604.html">BIB</a>
+<a class="card-button" href="https://virtual.oxfordabstracts.com/event/73412/submission/604" target="_blank"> IEPC </a>
+<a class="card-button" href="https://files.sven-j-steinert.de/IEPC-2025-604.pdf" target="_blank"> PDF </a>
+<a class="card-button" href="https://doi.org/10.5281/zenodo.18016456" target="_blank"> DOI </a>
+</div>
+</div>
+</div>
+<div class="card">
+<img alt="Project Gallery" class="card-gallery" src="/Masterthesis.avif"/>
+<div class="card-content">
+<h2 class="card-title">Experimental Characterisation of the XR-100 Resistojet in the ESA Propulsion Laboratory</h2>
+<p class="card-type">Masterthesis - 2024, ESA &amp; TUM</p>
+<p class="card-summary"> An experimental setup was constructed
+ and executed at ESTEC, the Netherlands. Multiple data acquisition 
+systems based on LabVIEW were used to record key parameters during 
+testing. The Imperial College London thrust balance was utilised and 
+improved in several aspects. The calibration procedure and evaluation 
+were automated, the uncertainty budget was expanded, and a new 
+post-processing method was developed to support thrust curve 
+measurements. Uncertainty budgets were determined for the mass flow rate
+ and thrust measurements, and propagated to the resulting specific 
+impulse. This characterisation served to develop comprehensive skills 
+related to vacuum testing of electric propulsion systems.</p>
+<div class="card-button-container">
+<a aria-label="Publication landing page (Google Scholar)" class="card-button pubpage-link" href="https://sven-j-steinert.de/scholar/masterthesis.html">BIB</a>
+<a class="card-button" href="https://files.sven-j-steinert.de/Masterthesis.pdf" target="_blank"> PDF </a>
+<a class="card-button" href="https://doi.org/10.5281/zenodo.18002385" target="_blank"> DOI </a>
+</div>
+</div>
+</div>
+<div class="card">
+<img alt="Project Gallery" class="card-gallery" src="/Smesterthesis.avif"/>
+<div class="card-content">
+<h2 class="card-title">Design of a Hall Thruster and Investigation for a Water Electrolysis Propulsion System</h2>
+<p class="card-type">Semesterthesis - 2024, TUM</p>
+<p class="card-summary">As an early stage investigation on 
+electrical propulsion via electrolysis, a Hall Thruster was designed for
+ operation on molecular oxygen. A magnetically shielded configuration 
+was developed through simulations with FEMM. To enable parametric 
+testing, the discharge channel length was layed out to be stepless 
+adjustable. Nevertheless, it is concluded that electric propulsion based
+ on oxygen is facing drawbacks in low efficiency, especially when 
+evaluated over the full electrolysis system. As alternative, 
+experimental ideas for OH- ion extraction directly from the water are 
+proposed.</p>
+<div class="card-button-container">
+<a class="card-button" href="https://files.sven-j-steinert.de/Semesterthesis.pdf" target="_blank"> PDF </a>
+</div>
+</div>
+</div>
+<div class="card">
+<img alt="Project Gallery" class="card-gallery" src="/Frontiers.avif"/>
+<div class="card-content">
+<h2 class="card-title">Location-dependent flight cost 
+difference from the lunar surface to an orbital fuel depot and its 
+influence on in-situ resource utilisation location selection</h2>
+<p class="card-type">Peer Reviewed Research Paper - 2024, DLR</p>
+<p class="card-summary">In order to determine the most optimal
+ location for a robotic factory on the moon, production- and 
+transportation dependencies have been compared. In this work, the 
+process of ilmenite reduction was analysed globally with imaging data of
+ the Lunar Reconnaissance Orbiter and factory scaling models. For the 
+transportation costs a global delta-v map to the 9:2 NRHO was 
+constructed, which was applied to a launcher. The key finding is an 
+insignificant influence of the transportation costs on the location 
+selection.</p>
+<div class="card-button-container">
+<a class="card-button" href="https://github.com/Sven-J-Steinert/10.3389-frspt.2024.1352213" target="_blank"> <img alt="External link" loading="lazy" src="/repo.svg" style="height:30px"/> </a>
+<a class="card-button" href="https://www.frontiersin.org/journals/space-technologies/articles/10.3389/frspt.2024.1352213/pdf" target="_blank"> PDF </a>
+<a class="card-button" href="https://doi.org/10.3389/frspt.2024.1352213" target="_blank"> DOI </a>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="card publications-card" id="publications">
+  <div class="card-content" style="width:100%;">
+    <h2 class="card-title">Publications</h2>
+    <ul class="pub-list">
+<li><strong>Compact Laser Ignition for Vacuum Arc Thrusters</strong> — Sven Julius Steinert; Tommi Meyer; Jochen Schein (IEPC, 2025). 
+      <a class="pub-link" href="https://sven-j-steinert.de/scholar/iepc-2025-604.html">Publication page</a> | 
+      <a class="pub-link" href="https://files.sven-j-steinert.de/IEPC-2025-604.pdf">PDF</a> | 
+      <a class="pub-link" href="https://doi.org/10.5281/zenodo.18016456">DOI</a></li>
+<li><strong>Experimental Characterisation of the XR-100 Resistojet in the ESA Propulsion Laboratory</strong> — Sven Julius Steinert (Master’s thesis, 2024). 
+      <a class="pub-link" href="https://sven-j-steinert.de/scholar/masterthesis.html">Publication page</a> | 
+      <a class="pub-link" href="https://files.sven-j-steinert.de/Masterthesis.pdf">PDF</a> | 
+      <a class="pub-link" href="https://doi.org/10.5281/zenodo.18002385">DOI</a></li>
+<li><strong>Design of a Hall Thruster and Investigation for a Water Electrolysis Propulsion System</strong> — Sven Julius Steinert (Semester thesis, 2024, TUM). 
+      <a class="pub-link" href="https://files.sven-j-steinert.de/Semesterthesis.pdf">PDF</a></li>
+<li><strong>Location-dependent flight cost difference from the lunar surface to an orbital fuel depot and its influence on in-situ resource utilisation location selection</strong> — Sven Julius Steinert (Peer‑reviewed research paper, 2024). 
+      <a class="pub-link" href="https://doi.org/10.3389/frspt.2024.1352213">DOI</a> | 
+      <a class="pub-link" href="https://www.frontiersin.org/journals/space-technologies/articles/10.3389/frspt.2024.1352213/pdf">PDF</a> | 
+      <a class="pub-link" href="https://github.com/Sven-J-Steinert/10.3389-frspt.2024.1352213">Repository</a></li>
+</ul>
   </div>
+</div>
 
   <div class="footer">
     <a class="impressum-toggle" href="#">Impressum</a>
