--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
      <!-- Card Element -->
 <div class="card">
-<img alt="Project Gallery" class="card-gallery" src="/IEPC-2025.avif"/>
+<img alt="Project Gallery" class="card-gallery" src="img/IEPC-2025.avif"/>
 <div class="card-content">
 <h2 class="card-title">Compact Laser Ignition for Vacuum Arc Thrusters</h2>
 <p class="card-type">Conference Poster - IEPC 2025, UniBw</p>
@@ -67,7 +67,7 @@ reliant on laser ignition.</p>
 </div>
 </div>
 <div class="card">
-<img alt="Project Gallery" class="card-gallery" src="/Masterthesis.avif"/>
+<img alt="Project Gallery" class="card-gallery" src="img/Masterthesis.avif"/>
 <div class="card-content">
 <h2 class="card-title">Experimental Characterisation of the XR-100 Resistojet in the ESA Propulsion Laboratory</h2>
 <p class="card-type">Masterthesis - 2024, ESA &amp; TUM</p>
@@ -90,7 +90,7 @@ related to vacuum testing of electric propulsion systems.</p>
 </div>
 </div>
 <div class="card">
-<img alt="Project Gallery" class="card-gallery" src="/Smesterthesis.avif"/>
+<img alt="Project Gallery" class="card-gallery" src="img/Semesterthesis.avif"/>
 <div class="card-content">
 <h2 class="card-title">Design of a Hall Thruster and Investigation for a Water Electrolysis Propulsion System</h2>
 <p class="card-type">Semesterthesis - 2024, TUM</p>
@@ -110,7 +110,7 @@ proposed.</p>
 </div>
 </div>
 <div class="card">
-<img alt="Project Gallery" class="card-gallery" src="/Frontiers.avif"/>
+<img alt="Project Gallery" class="card-gallery" src="img/Frontiers.avif"/>
 <div class="card-content">
 <h2 class="card-title">Location-dependent flight cost 
 difference from the lunar surface to an orbital fuel depot and its 
@@ -126,7 +126,7 @@ constructed, which was applied to a launcher. The key finding is an
 insignificant influence of the transportation costs on the location 
 selection.</p>
 <div class="card-button-container">
-<a class="card-button" href="https://github.com/Sven-J-Steinert/10.3389-frspt.2024.1352213" target="_blank"> <img alt="External link" loading="lazy" src="/repo.svg" style="height:30px"/> </a>
+<a class="card-button" href="https://github.com/Sven-J-Steinert/10.3389-frspt.2024.1352213" target="_blank" > <img style="height:30px" src="img/repo.svg"> </a>
 <a class="card-button" href="https://www.frontiersin.org/journals/space-technologies/articles/10.3389/frspt.2024.1352213/pdf" target="_blank"> PDF </a>
 <a class="card-button" href="https://doi.org/10.3389/frspt.2024.1352213" target="_blank"> DOI </a>
 </div>
